<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_top_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_top_menu_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/c_000000"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/morse_to_alphabet" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tv_top_menu_title">

            <RadioGroup
                android:id="@+id/rg_conversion_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/rb_morse_to_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/rb_morse_to_alphabet"
                    android:textColor="@color/c_000000"
                    android:textSize="15dp" />

                <RadioButton
                    android:id="@+id/rb_alphabet_to_morse"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/rb_alphabet_to_morse"
                    android:textColor="@color/c_000000"
                    android:textSize="15dp" />

            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scroll_item"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_top_menu"
        app:layout_constraintBottom_toTopOf="@id/layout_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp">

            <TextView
                android:id="@+id/tv_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_title"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/morse_title"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_input_title"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ed_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_input_title" />

            <TextView
                android:id="@+id/tv_output_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_title"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ed_input" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/alphabet_title"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/tv_output_title"
                app:layout_constraintTop_toBottomOf="@+id/ed_input" />

            <TextView
                android:id="@+id/tv_output_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_input"
                android:paddingHorizontal="5dp"
                android:paddingVertical="2dp"
                android:textColor="@color/c_000000"
                android:textSize="15dp"
                app:layout_constraintTop_toBottomOf="@id/tv_output_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/btn_conversion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/bg_btn"
            android:gravity="center"
            android:text="@string/btn_conversion"
            android:textColor="@color/c_ffffff"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/layout_input_btn" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_input_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/btn_short"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/btn_short"
                android:textColor="@color/c_ffffff"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_long"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/btn_long"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/btn_long"
                android:textColor="@color/c_ffffff"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_space"
                app:layout_constraintStart_toEndOf="@id/btn_short" />

            <TextView
                android:id="@+id/btn_space"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_btn"
                android:gravity="center"
                android:text="@string/btn_space"
                android:textColor="@color/c_ffffff"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_long" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>